Upgrade index.html to Workout Tracker PRO
Updated the Workout Tracker to PRO version with enhanced features including templates, bodyweight tracking, and improved styling.

--- a/index.html
+++ b/index.html
@@ -3,154 +3,239 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Workout Tracker</title>
+<title>Workout Tracker PRO+</title>
+
+<link rel="manifest" href="data:application/json,{
+  &quot;name&quot;:&quot;Workout Tracker PRO+&quot;,
+  &quot;short_name&quot;:&quot;Workout&quot;,
+  &quot;start_url&quot;:&quot;.&quot;,
+  &quot;display&quot;:&quot;standalone&quot;,
+  &quot;background_color&quot;:&quot;#020617&quot;,
+  &quot;theme_color&quot;:&quot;#38bdf8&quot;
+}">
 
 <style>
+:root {
+  --bg:#020617;
+  --card:#020617;
+  --border:#1e293b;
+  --text:#e5e7eb;
+  --accent:#38bdf8;
+}
+.light {
+  --bg:#f8fafc;
+  --card:#ffffff;
+  --border:#cbd5e1;
+  --text:#020617;
+}
 body {
-  font-family: Arial, sans-serif;
-  background: #0f172a;
-  color: #e5e7eb;
-  margin: 0;
-  padding: 15px;
+  margin:0;
+  font-family:Arial;
+  background:var(--bg);
+  color:var(--text);
+  padding:12px;
 }
-h1 {
-  text-align: center;
-  color: #38bdf8;
-}
+h1 { text-align:center; color:var(--accent); }
 .card {
-  background: #020617;
-  padding: 15px;
-  border-radius: 12px;
-  margin-bottom: 15px;
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:14px;
+  padding:14px;
+  margin-bottom:12px;
 }
-input, button {
-  width: 100%;
-  padding: 10px;
-  margin: 6px 0;
-  border-radius: 8px;
-  border: none;
+input, button, select {
+  width:100%;
+  padding:10px;
+  margin-top:6px;
+  border-radius:10px;
+  border:none;
 }
-input {
-  background: #020617;
-  color: #fff;
-  border: 1px solid #334155;
+input, select {
+  background:var(--bg);
+  color:var(--text);
+  border:1px solid var(--border);
 }
 button {
-  background: #38bdf8;
-  font-weight: bold;
-  cursor: pointer;
+  background:var(--accent);
+  font-weight:bold;
 }
-button:hover {
-  opacity: 0.9;
-}
-.exercise {
-  border-bottom: 1px solid #1e293b;
-  padding: 8px 0;
-}
-.timer {
-  font-size: 28px;
-  text-align: center;
-  margin: 10px 0;
-}
-.calendar {
-  text-align: center;
-}
+.exercise { border-bottom:1px solid var(--border); padding:6px 0; }
+.pr { color:#22c55e; font-weight:bold; }
+.timer { font-size:32px; text-align:center; }
+.flex { display:flex; gap:8px; }
+canvas { width:100%; }
 </style>
 </head>
 
 <body>
 
-<h1>🏋️ Workout Tracker</h1>
+<h1>🏋️ Workout Tracker PRO+</h1>
 
-<div class="card calendar">
-  <h3>Select Date</h3>
-  <input type="date" id="workoutDate">
+<div class="card">
+  <button onclick="toggleTheme()">🌙 / ☀️ Toggle Theme</button>
+</div>
+
+<div class="card">
+  <h3>📅 Date</h3>
+  <input type="date" id="date">
+</div>
+
+<div class="card">
+  <h3>📋 Templates</h3>
+  <select id="template">
+    <option value="">Select Template</option>
+    <option value="push">Push Day</option>
+    <option value="pull">Pull Day</option>
+    <option value="legs">Leg Day</option>
+    <option value="full">Full Body</option>
+  </select>
+  <button onclick="loadTemplate()">Load Template</button>
 </div>
 
 <div class="card">
   <h3>Add Exercise</h3>
-  <input id="exerciseName" placeholder="Exercise name">
-  <input id="sets" type="number" placeholder="Sets">
-  <input id="reps" type="number" placeholder="Reps">
+  <input id="name" placeholder="Exercise">
+  <div class="flex">
+    <input id="sets" type="number" placeholder="Sets">
+    <input id="reps" type="number" placeholder="Reps">
+    <input id="weight" type="number" placeholder="Kg">
+  </div>
   <button onclick="addExercise()">Add</button>
 </div>
 
 <div class="card">
   <h3>Workout Log</h3>
-  <div id="workoutList"></div>
+  <div id="list"></div>
+</div>
+
+<div class="card">
+  <h3>⚖️ Bodyweight</h3>
+  <input id="bw" type="number" placeholder="Kg">
+  <button onclick="saveBW()">Save</button>
+  <canvas id="bwChart" height="120"></canvas>
 </div>
 
 <div class="card">
   <h3>⏱ Rest Timer</h3>
-  <input id="restTime" type="number" placeholder="Rest seconds">
+  <input id="rest" type="number" placeholder="Seconds">
   <div class="timer" id="timer">00:00</div>
-  <button onclick="startTimer()">Start Timer</button>
+  <button onclick="startTimer()">Start</button>
+</div>
+
+<div class="card">
+  <h3>📦 Backup</h3>
+  <button onclick="exportData()">Export Data</button>
+  <input type="file" onchange="importData(event)">
 </div>
 
 <script>
-const workoutList = document.getElementById("workoutList");
-const dateInput = document.getElementById("workoutDate");
+const dateInput=document.getElementById("date");
+dateInput.valueAsDate=new Date();
 
-dateInput.valueAsDate = new Date();
+const prs=JSON.parse(localStorage.getItem("prs")||"{}");
+const theme=localStorage.getItem("theme");
+if(theme==="light") document.body.classList.add("light");
 
-function getKey() {
-  return "workout_" + dateInput.value;
-}
+function key(){return "workout_"+dateInput.value;}
 
-function loadWorkout() {
-  workoutList.innerHTML = "";
-  const data = JSON.parse(localStorage.getItem(getKey())) || [];
-  data.forEach(ex => {
-    const div = document.createElement("div");
-    div.className = "exercise";
-    div.textContent = `${ex.name} - ${ex.sets} x ${ex.reps}`;
-    workoutList.appendChild(div);
+function load(){
+  const list=document.getElementById("list");
+  list.innerHTML="";
+  const data=JSON.parse(localStorage.getItem(key())||"[]");
+  data.forEach(e=>{
+    const d=document.createElement("div");
+    d.className="exercise";
+    d.innerHTML=`${e.name} ${e.sets}x${e.reps} @ ${e.weight}kg ${e.pr?'<span class="pr">PR</span>':''}`;
+    list.appendChild(d);
   });
 }
+dateInput.onchange=load; load();
 
-function addExercise() {
-  const name = exerciseName.value;
-  const sets = sets.value;
-  const reps = reps.value;
-
-  if (!name || !sets || !reps) return;
-
-  const data = JSON.parse(localStorage.getItem(getKey())) || [];
-  data.push({ name, sets, reps });
-  localStorage.setItem(getKey(), JSON.stringify(data));
-
-  exerciseName.value = "";
-  sets.value = "";
-  reps.value = "";
-
-  loadWorkout();
+function addExercise(){
+  const n=name.value,s=+sets.value,r=+reps.value,w=+weight.value;
+  if(!n||!s||!r||!w) return;
+  let pr=false;
+  if(!prs[n]||w>prs[n]){prs[n]=w;pr=true;}
+  localStorage.setItem("prs",JSON.stringify(prs));
+  const d=JSON.parse(localStorage.getItem(key())||"[]");
+  d.push({name:n,sets:s,reps:r,weight:w,pr});
+  localStorage.setItem(key(),JSON.stringify(d));
+  load();
 }
 
-dateInput.addEventListener("change", loadWorkout);
-loadWorkout();
+function loadTemplate(){
+  const t=template.value;
+  const map={
+    push:["Bench Press","Shoulder Press","Tricep Dips"],
+    pull:["Deadlift","Pull Ups","Barbell Row"],
+    legs:["Squats","Leg Press","Calf Raises"],
+    full:["Squats","Bench Press","Rows"]
+  };
+  if(!map[t]) return;
+  const d=map[t].map(n=>({name:n,sets:3,reps:10,weight:0,pr:false}));
+  localStorage.setItem(key(),JSON.stringify(d));
+  load();
+}
 
-// TIMER
-let interval;
-function startTimer() {
-  clearInterval(interval);
-  let time = parseInt(restTime.value);
-  if (!time) return;
+/* BODYWEIGHT */
+function saveBW(){
+  localStorage.setItem("bw_"+dateInput.value,bw.value);
+  drawBW();
+}
+function drawBW(){
+  const c=bwChart,ctx=c.getContext("2d");
+  ctx.clearRect(0,0,c.width,c.height);
+  let data=[];
+  for(let i=6;i>=0;i--){
+    let d=new Date(); d.setDate(d.getDate()-i);
+    data.push(+localStorage.getItem("bw_"+d.toISOString().split("T")[0])||0);
+  }
+  const max=Math.max(...data,1);
+  data.forEach((v,i)=>{
+    const h=(v/max)*(c.height-20);
+    ctx.fillStyle="#38bdf8";
+    ctx.fillRect(i*45+10,c.height-h,30,h);
+  });
+}
+drawBW();
 
-  updateTimer(time);
-  interval = setInterval(() => {
-    time--;
-    updateTimer(time);
-    if (time <= 0) {
-      clearInterval(interval);
-      alert("Rest Over! 💪");
+/* TIMER */
+let t;
+function startTimer(){
+  clearInterval(t);
+  let s=+rest.value; if(!s) return;
+  update(s);
+  t=setInterval(()=>{
+    s--; update(s);
+    if(s<=0){
+      clearInterval(t);
+      navigator.vibrate?.(500);
+      alert("REST OVER 💪");
     }
-  }, 1000);
+  },1000);
+}
+function update(s){
+  timer.textContent=`${String(Math.floor(s/60)).padStart(2,"0")}:${String(s%60).padStart(2,"0")}`;
 }
 
-function updateTimer(seconds) {
-  const m = String(Math.floor(seconds / 60)).padStart(2, "0");
-  const s = String(seconds % 60).padStart(2, "0");
-  timer.textContent = `${m}:${s}`;
+/* BACKUP */
+function exportData(){
+  const data=JSON.stringify(localStorage);
+  const a=document.createElement("a");
+  a.href=URL.createObjectURL(new Blob([data]));
+  a.download="workout-backup.json";
+  a.click();
+}
+function importData(e){
+  const f=new FileReader();
+  f.onload=()=>{const d=JSON.parse(f.result);Object.keys(d).forEach(k=>localStorage.setItem(k,d[k]));location.reload();};
+  f.readAsText(e.target.files[0]);
+}
+
+/* THEME */
+function toggleTheme(){
+  document.body.classList.toggle("light");
+  localStorage.setItem("theme",document.body.classList.contains("light")?"light":"dark");
 }
 </script>
 
